welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: value unary_! is not a member of Int
while (!2 * biscuits = caseOrange + 1) {
       ^RunHalf:14: error: Unit does not take parameters
  } else () {
            ^